# piperr

./: .gitignore  README.md  compose.yml
frontend/: .eslintrc.json  Dockerfile  README.md  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/.nginx/: nginx.conf
frontend/app/: about.module.css  about.module.tsx  button.module.css  button.module.tsx  card.module.css  card.module.tsx  card.ts  card.tsx  domains.ts  error.module.tsx  globals.css  hamburger.module.css  hamburger.module.tsx  header.module.css  header.module.tsx  header.tsx  layout.module.css  layout.tsx  page.module.css  page.module.tsx  page.tsx  persist.module.css  persist.module.tsx  util.ts  workflow.module.css  workflow.module.tsx  workflow.ts
frontend/app/about/: about.module.css
frontend/app/commons/: domains.ts  error.module.css  spinner.module.css  spinner.module.tsx  util.ts
frontend/app/header/: hamburger.module.tsx  header.module.css  header.module.tsx  persist.module.css  persist.module.tsx
frontend/app/settings/: settings.module.css  settings.module.tsx
frontend/app/workflows/: card.module.css  card.module.tsx  page.module.tsx  (+2 more)
server/: .gitignore  Dockerfile  README.md  agent.Dockerfile  agent.py  common.py  main.py  pyproject.toml  schema.sql  workflows.db
server/features/: environment.py  settings.feature  workflows.feature
server/features/steps/: steps.py
server/features/testdata/: settings_basic.json  workflow_barebones.json  workflow_basic.json  workflow_multiple.json  workflow_multiple_cards.json
